{
    "name": "CharacterInputs",
    "maps": [
        {
            "name": "Player",
            "id": "096ffd2a-b597-4ac2-bd94-373c67992f7f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "cdfa34cf-a71a-407f-80dc-26e6758d6fa6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "b8aa9b9b-2bf8-4953-9193-6e5dc5d42b9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "44bf9536-eccd-429e-9d81-516bcb994b2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ability2",
                    "type": "Button",
                    "id": "73a8c356-bb7d-4f82-b35e-91f77d984f04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9f54eec8-8f50-473d-ac9e-b3d57880dfd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Evolve",
                    "type": "Button",
                    "id": "13ef0cca-1f95-4722-9cd3-b2a15125191b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Devolve",
                    "type": "Button",
                    "id": "94f7094b-d82d-4e2f-a1fa-5ad69650bc72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e9da84b3-841e-4001-ba0f-1b252b17cf81",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Walk",
                    "id": "6c746106-addd-44c2-8e7a-6c442b414e7c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "32c35042-8984-4945-911f-bf2b4d7adc9c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6710d672-62ed-4672-93a5-93aac45f14e5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6d3f6d08-97c3-4658-a7e6-52b636a9b44e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cbe84efd-5e5f-4038-8eac-44f9756e8436",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "43a40432-dcaf-439f-9987-e211ca9bc4ec",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5edd999-9aac-48df-bfa1-db28a9423971",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c231873-4597-452d-bb90-39d2e4e81156",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07254b62-9c89-4b98-bbb4-10c2e4c8a076",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Evolve",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "358c9967-01b2-4f29-abd1-5a815e4c5f15",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Devolve",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerLook",
            "id": "1506ea37-ee2f-4a08-8afb-13ac23dee6cd",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "f712900d-8bd1-47e9-b16d-87274ef56271",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3405cb66-5f89-4e0d-b01a-330bb7ec7f75",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false)",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DisplayScoreBoard",
            "id": "6faad154-8540-4496-b2c7-0627ded36c00",
            "actions": [
                {
                    "name": "DisplayScoreBoard",
                    "type": "Button",
                    "id": "c7dd31d6-ead3-4559-a1dc-2583b8f0fce6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "da02979f-1459-4154-9735-8d233f1181f5",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DisplayScoreBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}